# SHIFT-test-task

./: .env-sample  .gitignore  Dockerfile  README.md  cmds.sh  docker-compose.yml  insert_into_tables.sql  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 58c1989b18d4_database_creation.py  e5af0d15fba2_database_creation.py
src/: crud.py  dependencies.py
src/database/: config.py  database.py
src/models/: models.py  utils.py
src/routes/: employee.py  routes.py  salary.py
src/schemas/: schemas.py
src/tests/: test_api.py
