[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Shved15 <maks.shihiwtsow15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["full"], version = "^0.97.0"}
uvicorn = "^0.22.0"
alembic = "^1.11.1"
sqlalchemy = "^2.0.16"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
asyncpg = "^0.27.0"
greenlet = "^2.0.2"
isort = "^5.12.0"
flake8 = "^6.0.0"
pytest-asyncio = "^0.21.0"
httpx = "^0.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
skip = "migrations"

